Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22761

Quick Tests with multiple TestCase types are not handled correctly

XMLWordPrintable

    • Windows
    • c020fb6e3e5e2cb4ab4dcdb76fbc7693b1e45c96 (qt-creator/qt-creator/4.10)

      If you create a QML test file (like tst_MyApp.qml) with more than one TestCase type, Qt Creator displays only the last TestCase name in the Tests tree, containing test_*() functions from all TestCase objects from that file. The result in the Tests tree is shown in the attached image.

      Running "Selected tests" for all the tests under the displayed Test Case (in this example, TestCase2) fails with the attached XML file (selectedTests.xml) as output. Running the single test function (test_TestCase1()) that doesn't belong to the displayed name (TestCase2) also fails while running the one belonging to the displayed name succeeds.

      Running all tests succeeds as it does generally from command-line.

        1. Tests tree.png
          Tests tree.png
          2 kB
        2. tst_MyApp.qml
          0.3 kB
        3. selectedTests.xml
          0.8 kB
        4. image-2019-07-24-17-32-00-675.png
          image-2019-07-24-17-32-00-675.png
          16 kB
        For Gerrit Dashboard: QTCREATORBUG-22761
        # Subject Branch Project Status CR V

            cstenger Christian Stenger
            piyoosh Piyoosh Mukhija
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes